@@ -20,6 +20,7 @@ Date:
     Features:
         - Add an "Auto balance" button to the summary page, allowing quick balancing of inputs and outputs across
           multi-page projects. Known issue: The button requires multiple clicks, which appears to be related to #169.
+        - Add a right-click context menu to the tab header.
     Bugfixes:
         - Several fixes to the legacy summary page, including a regression in 0.8.1.
 ----------------------------------------------------------------------------------------------------------------------
